@@ -1,3 +1,4 @@
+Dec 01 2002  2.7.1  Internal modifications to the frontend power display
 Nov 30 2002  2.7.1  Fixed kismet_hopper for cisco_cvs
 Nov 29 2002  2.7.1  Changed client back to only updating once per second - 
                      massive speed improvements.
